test/res/error/cd9_res1.tmp
/Users/ptruffau/42sh/test
